<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CrimenFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_text" />
    <EditText
        android:id="@+id/titulo_text"
        android:hint="@string/titulo_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/detalles_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:foreground="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="2px"/>

    <Button
        android:id="@+id/agregar_fecha_btn"
        android:text="@string/agregar_fecha_btn"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/resuelto_ch"
        android:text="@string/resuelto_chb"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>